[package]
name = "rustlang-crate-template"
description = "FIXME_ADD_DESCRIPTION"
homepage = "FIXME_ADD_HOMEPAGE"
documentation = "FIXME_ADD_HOMEPAGE"
repository = "FIXME_ADD_REPOSITORY"
version = "FIXME_ADD_VERSION"
authors = ["Jon Doe <Jonny@Doed.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
